tests/error_printing/error_printing.exp
Error ----------------------------------------------------------------------------------------------------- test.js:18:6

Cannot create `Foo` element because number [1] is incompatible with boolean [2] in property `a`. [incompatible-type]

   test.js:18:6
   18|   a={3}
            ^ [1]

References:
   test.js:6:7
    6|   +a: boolean,
             ^^^^^^^ [2]



Found 1 error
